syntax = "proto3";
import public "global_options.proto";

option go_package="./;proto";
option java_package = "org.liquibase.grpc.proto";
option java_multiple_files = true;
option java_outer_classname = "ChecksShowProto";

package liquibase.pro;

service ChecksShowService {
  rpc execute(Checks.ShowRequest) returns (Response) {}
}

/* List available checks, their configuration options, and current settings */
message Checks {
  message ShowRequest {
    optional string auto_update = 1; // Allows automatic backup and updating of liquibase.checks.conf file when new quality checks are available, or for file format changes. Options: [on|off]
    optional string check_name = 2; // Only show the listed rules. Use rule shortnames separated with commas to list all required rules. Checks to exclude can be prefixed with the ! character. Use 'all', to select all the rules (used by default, if the parameter isn't set).
    optional string checks_packages = 3; // If using a checks packages file, optionally specify which packages should be run from the file as a comma separated list.
    optional string checks_settings_file = 4; // Relative or fully qualified path to a configuration file for checks execution
    optional string show_cols = 5; // Only show the listed columns. Column options: id,checkname,type,priority,shortname,scope,enabled,severity,customization,description,file. Use commas to separate column names. Use 'all' to select all the columns.
    liquibase.GlobalOptions global_options = 6;
  }
}

message Response {
  string message = 1;
}
